--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,280 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Importing Google Fonts - Inter */
+@import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+/* body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(#f4f0ff, #dacdff);
+} */
+
+/* #chatbot_toggler {
+  position: fixed;
+  bottom: 30px;
+  right: 35px;
+  border: none;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  cursor: pointer;
+  border-radius: 50%;
+  background: #6d4fc2;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease;
+}
+
+#chatbot_toggler span {
+  position: absolute;
+  color: #fff;
+}
+
+.container.show-chatbot #chatbot_toggler {
+  transform: rotate(90deg);
+}
+#chatbot_toggler span:last-child,
+.container.show-chatbot #chatbot_toggler span:first-child {
+  opacity: 0;
+}
+
+.container.show-chatbot #chatbot_toggler span:last-child {
+  opacity: 1;
+} */
+.container{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(#f4f0ff, #dacdff);
+}
+
+.chatbot_popup {
+  /* position: fixed; */
+  /* opacity: 0; */
+  /* pointer-events: none; */
+  /* bottom: 90px; */
+  /* right: 35px; */
+  width: 420px;
+  /* transform: scale(0.2); */
+  overflow: hidden;
+  background: #fff;
+  border-radius: 15px;
+  /* transform-origin: bottom right; */
+  box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
+    0 32px 64px -48px rgba(0, 0, 0, 0.5);
+  /* transition: all 0.1s ease; */
+}
+
+/* .container.show-chatbot .chatbot_popup {
+  opacity: 1;
+  pointer-events: auto;
+  transform: scale(1);
+} */
+
+.chatbot_popup .chat_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #6d4fc2;
+  padding: 15px 22px;
+}
+
+.chat_header .header_info {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.header_info svg {
+  height: 35px;
+  width: 35px;
+  padding: 6px;
+  flex-shrink: 0;
+  fill: #6d4fc2;
+  background: #fff;
+  border-radius: 50%;
+}
+
+.header_info .logo_text {
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.chat_header button {
+  height: 40px;
+  width: 40px;
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.9rem;
+  padding-top: 2px;
+  border-radius: 50%;
+  margin-right: -10px;
+  background: none;
+  transition: 0.2s ease;
+}
+
+.chat_header button:hover {
+  background: #593bab;
+}
+
+.chat_body {
+  padding: 25px 22px;
+  width: 420px;
+  height: 460px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 82px;
+  scrollbar-width: thin;
+  scrollbar-color: #ddd3f9 transparent;
+}
+
+.chat_body .message {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+
+.chat_body .message.error .message_text{
+  color:#ff0000
+}
+
+.chat_body .bot_message svg {
+  height: 35px;
+  width: 35px;
+  padding: 6px;
+  flex-shrink: 0;
+  background: #6d4fc2;
+  fill: #fff;
+  margin-bottom: 2px;
+  align-self: flex-end;
+  border-radius: 50%;
+}
+
+.chat_body .message .message_text {
+  padding: 12px 16px;
+  max-width: 75%;
+  word-wrap: break-word;
+  white-space: pre-line;
+  font-size: 0.95rem;
+}
+
+.chat_body .bot_message .message_text {
+  background: #f6f2ff;
+  border-radius: 13px 13px 13px 3px;
+}
+
+.chat_body .user_message {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.chat_body .user_message .message_text {
+  color: #fff;
+  background: #6d4fc2;
+  border-radius: 13px 13px 3px 13px;
+}
+
+.chat_footer {
+  position: absolute;
+  bottom: 0;
+  width: 420px;
+  background: #fff;
+  padding: 15px 22px 20px;
+}
+
+.chat_footer .chat_form {
+  display: flex;
+  align-items: center;
+  background: #fff;
+  outline: 1px solid #cccce5;
+  border-radius: 32px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.06);
+}
+
+.chat_footer .chat_form:focus-within {
+  outline: 2px solid #6d4fc2;
+}
+
+.chat_form .message_input {
+  border: none;
+  outline: none;
+  width: 100%;
+  background: none;
+  height: 47px;
+  padding: 0px 17px;
+  font-size: 0.95rem;
+}
+
+.chat_form button {
+  height: 35px;
+  width: 35px;
+  border: none;
+  outline: none;
+  display: none;
+  cursor: pointer;
+  font-size: 1.15rem;
+  margin-right: 6px;
+  flex-shrink: 0;
+  color: #fff;
+  border-radius: 50%;
+  background: #6d4fc2;
+  transition: 0.2s ease;
+}
+
+.chat_form button:hover {
+  background: #593bab;
+}
+
+.chat_form .message_input:valid ~ button {
+  display: block;
+}
+
+
+/* Responsive Media Query for mobile screens */
+@media (max-width:520px){
+  #chatbot_toggler{
+    right: 20px;
+    bottom: 20px;
+  }
+
+  .chatbot_popup{
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    border-radius: 0;
+    width: 100%;
+  }
+
+  .chatbot_popup .chat_header{
+    padding: 12px 15px;
+  }
+
+  .chat_body{
+    height: calc(90% - 55px);
+    padding: 25px 15px;
+  }
+
+  .chat_footer{
+    padding: 10px 15px 15px;
+  }
+}
