--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,58 +5,9 @@
 /* Importing Google Fonts - Inter */
 @import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Inter", sans-serif;
-}
-
-/* body {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(#f4f0ff, #dacdff);
-} */
-
-/* #chatbot_toggler {
-  position: fixed;
-  bottom: 30px;
-  right: 35px;
-  border: none;
-  height: 50px;
-  width: 50px;
-  display: flex;
-  cursor: pointer;
-  border-radius: 50%;
-  background: #6d4fc2;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.2s ease;
-}
-
-#chatbot_toggler span {
-  position: absolute;
-  color: #fff;
-}
-
-.container.show-chatbot #chatbot_toggler {
-  transform: rotate(90deg);
-}
-#chatbot_toggler span:last-child,
-.container.show-chatbot #chatbot_toggler span:first-child {
-  opacity: 0;
-}
-
-.container.show-chatbot #chatbot_toggler span:last-child {
-  opacity: 1;
-} */
 .container{
     width: 100vw;
     height: 100vh;
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,27 +15,14 @@
 }
 
 .chatbot_popup {
-  /* position: fixed; */
-  /* opacity: 0; */
-  /* pointer-events: none; */
-  /* bottom: 90px; */
-  /* right: 35px; */
-  width: 420px;
-  /* transform: scale(0.2); */
+  width: 75vw;
+  position: relative;
   overflow: hidden;
   background: #fff;
   border-radius: 15px;
-  /* transform-origin: bottom right; */
   box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
     0 32px 64px -48px rgba(0, 0, 0, 0.5);
-  /* transition: all 0.1s ease; */
 }
-
-/* .container.show-chatbot .chatbot_popup {
-  opacity: 1;
-  pointer-events: auto;
-  transform: scale(1);
-} */
 
 .chatbot_popup .chat_header {
   display: flex;
@@ -137,8 +75,8 @@
 
 .chat_body {
   padding: 25px 22px;
-  width: 420px;
-  height: 460px;
+  width: 100%;
+  height: 30rem;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -172,7 +110,7 @@
 
 .chat_body .message .message_text {
   padding: 12px 16px;
-  max-width: 75%;
+  max-width: 85%;
   word-wrap: break-word;
   white-space: pre-line;
   font-size: 0.95rem;
@@ -197,7 +135,7 @@
 .chat_footer {
   position: absolute;
   bottom: 0;
-  width: 420px;
+  width: 100%;
   background: #fff;
   padding: 15px 22px 20px;
 }
