--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 /* Importing Google Fonts - Inter */
 @import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap");
 
-.container{
+.ChatBot_Container{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -76,7 +76,7 @@
 .chat_body {
   padding: 25px 22px;
   width: 100%;
-  height: 30rem;
+  height: 35rem;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
