--- a/client2/src/App.css
+++ b/client2/src/App.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 
+/* For ChatBot  */
+@import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap");
 
 
 body{
@@ -29,4 +31,17 @@ body{
 
 .reviews-bg{
   background: linear-gradient(122deg, #D9E1FF 6.95%, #EEE0ED 90.31%);
+}
+
+/* Youtube Video Section  */
+.videoTransition {
+  transition-property: all;
+  transition-duration: 350ms;
+  transition-timing-function: ease;
+  /* box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.24); */
+}
+
+.videoTransition:hover {
+  /* box-shadow: 0px 8px 10px 1px rgba(0, 0, 0, 0.2); */
+  transform: translateY(-20px);
 }
